<resources>
    <string name="app_name">Ewoks Power Vehicle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Activity -->
    <string name="fuel_log">Fuel log</string>
    <string name="statistics">Statistics</string>
    <string name="serviceLog">Service log</string>
    <string name="settings">Settings</string>

    <!-- NewRefuelFragment -->
    <string name="botNav_FuelLog">Fuel log</string>
    <string name="nFuFr_date">Date:</string>
    <string name="nFuFr_mileage">Mileage:</string>
    <string name="nFuFr_event">Event:</string>
    <string name="nFuFr_volume">Volume:</string>
    <string name="nFuFr_price">Price:</string>
    <string name="nFuFr_full_tank">Full Tank</string>
    <string name="nFuFr_save">Save</string>
    <string name="nFuFr_cancel">Cancel</string>
    <string name="nFuFr_enterTheMileage">Enter the mileage!</string>
    <string name="nFuFr_mileageMustBeMore">The mileage must be more than previous!</string>
    <string name="nFuFr_volumeMustBeMore">The volume must be more than 0!</string>
    <string name="nFuFr_enterFuelPrice">Enter the fuel price!</string>
    <string name="nFuFr_priceMostBePositive">The fuel price must be positive!</string>

    <!-- RefuelAdapter -->
    <string name="RefAdap_date">Date:</string>
    <string name="RefAdap_mileage">Mileage:</string>
    <string name="RefAdap_volume">Volume:</string>
    <string name="RefAdap_fuelPrice">Fuel price:</string>
    <string name="RefAdap_km">km</string>
    <string name="RefAdap_L">L</string>
    <string name="RefAdap_bynL">BYN/L</string>
    <string name="RefAdap_byn">BYN</string>
    <string name="RefAdap_L100km">L / 100Km</string>
    <string name="RefAdap_fullTank">Full tank</string>

    <!-- BottomNavigationMenu -->
    <string name="boNaMenu_fuelLog">Fuel log</string>
    <string name="boNaMenu_serviceLog">Service log</string>
    <string name="boNaMenu_statistics">Statistics</string>
    <string name="boNaMenu_settings">Settings</string>

    <!-- StatisticFragment -->
    <string name="frStat_average_consumption">Average consumption</string>
    <string name="feStat_driving_cost">Driving cost</string>
    <string name="frStat_total">Total:</string>
    <string name="frStat_average_mileage_on_one_refuel">Average mileage on one refuel</string>
    <string name="frStat_total_mileage">Total mileage</string>
    <string name="frStat_byn100km">BYN / 100 km</string>

    <!-- Add new Refuel -->
    <string name="fr_title_auto">Title auto</string>
    <string name="fr_date">Date</string>
    <string name="fr_price_fuel">Price fuel</string>
    <string name="fr_total_cost">Total cost</string>
    <string name="fr_by">ryb.</string>
    <string name="fr_volume">Volume</string>
    <string name="fr_mileage">Mileage</string>
    <string name="fr_type_of_fuel">Type of fuel</string>
    <string name="fr_save">Save</string>
    <string name="fr_cancel">Cancel</string>
    <string name="fr_liter">liter</string>
    <string name="fr_kilometers">km</string>

    <!-- AAdd new service -->
    <string name="fr_add_new_service_title">Title</string>
    <string name="fr_add_new_service_mileage">Mileage</string>
    <string name="fr_add_new_service_description">Description</string>
    <string name="fr_add_new_service_cost">Cost</string>
    <string name="fr_add_new_service_add_service">Add Service</string>

    <string name="fr_add_new_service_type_label">Service Type:</string>
    <string name="fr_add_new_service_title_label">Enter the title</string>
    <string name="fr_add_new_service_mileage_label">Enter your mileage</string>
    <string name="fr_add_new_service_description_label">Enter the description</string>
    <string name="fr_add_new_service_cost_label">Enter the service cost</string>

    <!-- Add New Car Fragment -->
    <string name="fr_add_new_txt_name">Enter Name:</string>
    <string name="fr_add_new_edit_name">My Car 1</string>
    <string name="fr_add_new_txt_vin">Enter Vin Num</string>
    <string name="fr_add_new_edit_vin" translatable="false">1234567890123456</string>
    <string name="fr_add_new_txt_km">Enter km</string>
    <string name="fr_add_new_edit_km" translatable="false">250000</string>
    <string name="fr_add_new_txt_oil">Enter Last Oil change, km</string>
    <string name="fr_add_new_edit_oil" translatable="false">220000</string>
    <string name="fr_add_new_txt_brake">Enter Last Brake change, km</string>
    <string name="fr_add_new_edit_brake" translatable="false">220000</string>
    <string name="fr_add_new_txt_fuel_filter">Enter Last Fuel Filter change, km</string>
    <string name="fr_add_new_edit_fuel_filter" translatable="false">220000</string>
    <string name="fr_add_new_txt_air_filter">Enter Last Air Filter Change, km</string>
    <string name="fr_add_new_edit_air_filter" translatable="false">220000</string>
    <string name="fr_add_new_txt_salon_filter">Enter Last Salon Filter Change, km</string>
    <string name="fr_add_new_edit_salon_filter" translatable="false">220000</string>
    <string name="fr_add_new_txt_spark">Enter Last Spark Plugs, km</string>
    <string name="fr_add_new_edit_spark" translatable="false">220000</string>
    <string name="fr_add_new_txt_belt">Enter Last Timing Belt, km</string>
    <string name="fr_add_new_edit_belt" translatable="false">220000</string>
    <string name="fr_add_new_txt_strokes">Enter Last Strokes change, km</string>
    <string name="fr_add_new_edit_strokes" translatable="false">220000</string>
    <string name="fr_add_new_txt_wheel">Enter last wheels balancing, km</string>
    <string name="fr_add_new_edit_wheel" translatable="false">220000</string>
    <string name="fr_add_new_txt_antifreeze">Enter Last Antifreeze Change, km</string>
    <string name="fr_add_new_edit_antifreeze" translatable="false">220000</string>
    <string name="fr_add_new_btn_ok">Add New</string>


</resources>
