<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back_auto" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:cardBackgroundColor="#A1FFFDF0"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/title_text"
                style="@style/page_title_text"
                android:text="@string/fr_title_auto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDate"
                style="@style/input_title_text_big"
                android:layout_marginTop="30dp"
                android:text="@string/fr_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_text" />

            <EditText
                android:id="@+id/etTextDate"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="20dp"
                android:inputType="date"
                android:text="00/00/0000"
                android:textColor="#C44B06"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvDate"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvPriceFuel"
                style="@style/input_title_text_big"
                android:text="@string/fr_price_fuel"
                app:layout_constraintStart_toStartOf="@id/tvDate"
                app:layout_constraintTop_toBottomOf="@id/tvDate" />

            <EditText
                android:id="@+id/etPriceFuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:minWidth="40dp"
                android:text="0"
                android:textColor="#C44B06"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/tvPriceFuel"
                app:layout_constraintEnd_toEndOf="@id/etTextDate"
                app:layout_constraintStart_toStartOf="@id/etTextDate"
                app:layout_constraintTop_toTopOf="@id/tvPriceFuel" />

            <TextView
                android:id="@+id/tvMileage"
                style="@style/input_title_text_big"
                android:text="@string/fr_mileage"
                app:layout_constraintBottom_toTopOf="@id/tvVolume"
                app:layout_constraintStart_toStartOf="@id/tvDate"
                app:layout_constraintTop_toBottomOf="@id/tvPriceFuel" />

            <EditText
                android:id="@+id/etMileage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="40dp"
                android:inputType="number"
                android:text="0"
                android:textColor="#C44B06"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvMileage"
                app:layout_constraintEnd_toEndOf="@id/etPriceFuel"
                app:layout_constraintStart_toStartOf="@id/etPriceFuel" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="200dp"
                android:text="@string/fr_kilometers"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvMileage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvVolume"
                style="@style/input_title_text_big"
                android:text="@string/fr_volume"
                app:layout_constraintBottom_toTopOf="@id/tvTotalCost"
                app:layout_constraintStart_toStartOf="@id/tvDate"
                app:layout_constraintTop_toBottomOf="@id/tvMileage" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="20dp"
                android:text="@string/fr_by"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvPriceFuel"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvTotalCost"
                style="@style/input_title_text_big"
                android:text="@string/fr_total_cost"
                app:layout_constraintBottom_toTopOf="@id/checkBoxBold"
                app:layout_constraintStart_toStartOf="@id/tvDate"
                app:layout_constraintTop_toBottomOf="@id/tvVolume" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="20dp"
                android:background="#708B86"
                android:text="@string/fr_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/saveFuelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="#708B86"
                android:text="@string/fr_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/etVolumeFuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="40dp"
                android:text="0"
                android:inputType="numberDecimal"
                android:textColor="#C44B06"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvVolume"
                app:layout_constraintEnd_toEndOf="@+id/etMileage"
                app:layout_constraintStart_toStartOf="@+id/etMileage"
                app:layout_constraintTop_toTopOf="@+id/tvVolume" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="44dp"
                android:layout_height="34dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="150dp"
                android:text="@string/fr_liter"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvVolume"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/etTotalCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="40dp"
                android:text="0"
                android:inputType="numberDecimal"
                android:textColor="#C44B06"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/tvTotalCost"
                app:layout_constraintEnd_toEndOf="@+id/etVolumeFuel"
                app:layout_constraintStart_toStartOf="@id/etVolumeFuel"
                app:layout_constraintTop_toTopOf="@id/tvTotalCost" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="100dp"
                android:text="@string/fr_by"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvTotalCost"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <CheckBox
                android:id="@+id/checkBoxBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:buttonTint="#000000"
                android:padding="10dp"
                android:text="@string/nFuFr_full_tank"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/cancel"
                app:layout_constraintStart_toStartOf="@id/tvTotalCost"
                app:layout_constraintTop_toBottomOf="@id/tvTotalCost" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>